# fastapi-hello

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
exploration/: access_log.csv  analyze_logs.py  generate_logs.py  joke_collector.py  summary.csv
notes/: anthropic-cca-retrospective.md  fluent-python.md  ml-fundamentals.md  scratch.py
tests/: test_joke.py
